[gd_scene load_steps=15 format=3 uid="uid://c2i8yery286fq"]

[ext_resource type="Script" path="res://scripts/levels/base_level.gd" id="1_lyoi2"]
[ext_resource type="Texture2D" uid="uid://dpejgx338i3a3" path="res://img/sky/panorama_moody.png" id="2_qk4dl"]
[ext_resource type="PackedScene" uid="uid://b2ype4ks6wd5x" path="res://scenes/player/player.tscn" id="3_xhuey"]
[ext_resource type="PackedScene" uid="uid://b5m17kfq7jetu" path="res://scenes/level_elements/enemy_spawner.tscn" id="4_st4kf"]
[ext_resource type="PackedScene" uid="uid://bcael1rwki1g0" path="res://scenes/level_elements/enemy_spawn_area.tscn" id="5_31qg7"]
[ext_resource type="PackedScene" uid="uid://f6crd74r3c37" path="res://scenes/level_elements/nav_region.tscn" id="6_x51mm"]
[ext_resource type="PackedScene" uid="uid://clhqasfv2p8op" path="res://scenes/block_building/block_grid_map.tscn" id="7_m8bfi"]
[ext_resource type="PackedScene" uid="uid://yswaem7jo4aw" path="res://scenes/level_elements/gridmaps/metal_floor.tscn" id="8_57bcx"]
[ext_resource type="PackedScene" uid="uid://cmgmsd6xjbeb7" path="res://scenes/level_elements/gridmaps/metal_wall.tscn" id="9_2liud"]
[ext_resource type="PackedScene" uid="uid://dcfwwhx5t6idf" path="res://scenes/level_elements/generator.tscn" id="10_fogkv"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_81m0w"]
panorama = ExtResource("2_qk4dl")

[sub_resource type="Sky" id="Sky_kchqp"]
sky_material = SubResource("PanoramaSkyMaterial_81m0w")

[sub_resource type="Environment" id="Environment_24ohg"]
background_mode = 2
sky = SubResource("Sky_kchqp")
fog_density = 0.025
fog_sky_affect = 0.1
volumetric_fog_density = 1.0
volumetric_fog_temporal_reprojection_enabled = false

[sub_resource type="NavigationMesh" id="NavigationMesh_wml4b"]
resource_local_to_scene = true
vertices = PackedVector3Array(-23.25, 0.3, 8, -7.75, 0.3, 23.5, 7.75, 0.3, 23.5, 23.5, 0.3, 7.75, 23.5, 0.3, -7.75, 8, 0.3, -23.25, -8, 0.3, -23.25, -23.25, 0.3, -8)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(5, 4, 3), PackedInt32Array(6, 5, 7), PackedInt32Array(7, 5, 0), PackedInt32Array(0, 5, 3), PackedInt32Array(0, 3, 2)]
sample_partition_type = 1
geometry_parsed_geometry_type = 1
geometry_collision_mask = 50
agent_radius = 0.25
filter_walkable_low_height_spans = true

[node name="Lvl" type="Node3D" node_paths=PackedStringArray("player", "nav_region", "enemy_spawner", "block_gridmap", "world_environment", "build_phase_timer", "generators")]
script = ExtResource("1_lyoi2")
player = NodePath("Player")
nav_region = NodePath("NavRegion")
enemy_spawner = NodePath("EnemySpawner")
block_gridmap = NodePath("NavRegion/BlockGridMap")
world_environment = NodePath("WorldEnvironment")
build_phase_timer = NodePath("BuildPhaseTimer")
generators = [NodePath("Generator"), NodePath("Generator2")]
objective = "Survival"
level_identifier = "lvl"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_24ohg")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.939693, -0.296198, 0.17101, 0, 0.5, 0.866025, -0.34202, 0.813798, -0.469846, 0, 0, 0)
shadow_enabled = true
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("3_xhuey")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.7117, 0)

[node name="EnemySpawner" parent="." node_paths=PackedStringArray("enemy_parent_node", "initial_enemy_targets") instance=ExtResource("4_st4kf")]
enemy_parent_node = NodePath("../Enemies")
wave_size = 10
max_wave_size = 35
concurrent_enemies = 20
max_concurrent_enemies = 15
initial_enemy_targets = [NodePath("../Player"), NodePath("../Generator"), NodePath("../Generator2")]
metadata/_edit_lock_ = true

[node name="Spawners1" type="Node3D" parent="EnemySpawner"]
metadata/_edit_lock_ = true

[node name="EnemySpawnArea" parent="EnemySpawner/Spawners1" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -22)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea2" parent="EnemySpawner/Spawners1" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -22)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea3" parent="EnemySpawner/Spawners1" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -22)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea4" parent="EnemySpawner/Spawners1" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -18)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea5" parent="EnemySpawner/Spawners1" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -18)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea6" parent="EnemySpawner/Spawners1" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -18)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea7" parent="EnemySpawner/Spawners1" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -14)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea8" parent="EnemySpawner/Spawners1" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -14)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea9" parent="EnemySpawner/Spawners1" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -14)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea10" parent="EnemySpawner/Spawners1" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -14)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea11" parent="EnemySpawner/Spawners1" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -14)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea12" parent="EnemySpawner/Spawners1" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -18)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea13" parent="EnemySpawner/Spawners1" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -18)
metadata/_edit_lock_ = true

[node name="Spawners2" type="Node3D" parent="EnemySpawner"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea" parent="EnemySpawner/Spawners2" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -22)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea2" parent="EnemySpawner/Spawners2" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -22)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea3" parent="EnemySpawner/Spawners2" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -22)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea4" parent="EnemySpawner/Spawners2" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -18)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea5" parent="EnemySpawner/Spawners2" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -18)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea6" parent="EnemySpawner/Spawners2" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -18)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea7" parent="EnemySpawner/Spawners2" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -14)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea8" parent="EnemySpawner/Spawners2" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -14)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea9" parent="EnemySpawner/Spawners2" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -14)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea10" parent="EnemySpawner/Spawners2" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -14)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea11" parent="EnemySpawner/Spawners2" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -14)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea12" parent="EnemySpawner/Spawners2" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -18)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea13" parent="EnemySpawner/Spawners2" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -18)
metadata/_edit_lock_ = true

[node name="Spawners3" type="Node3D" parent="EnemySpawner"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea" parent="EnemySpawner/Spawners3" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -22)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea2" parent="EnemySpawner/Spawners3" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -22)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea3" parent="EnemySpawner/Spawners3" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -22)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea4" parent="EnemySpawner/Spawners3" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -18)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea5" parent="EnemySpawner/Spawners3" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -18)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea6" parent="EnemySpawner/Spawners3" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -18)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea7" parent="EnemySpawner/Spawners3" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -14)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea8" parent="EnemySpawner/Spawners3" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -14)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea9" parent="EnemySpawner/Spawners3" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -14)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea10" parent="EnemySpawner/Spawners3" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -14)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea11" parent="EnemySpawner/Spawners3" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -14)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea12" parent="EnemySpawner/Spawners3" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -18)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea13" parent="EnemySpawner/Spawners3" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -18)
metadata/_edit_lock_ = true

[node name="Spawners4" type="Node3D" parent="EnemySpawner"]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 0, 0)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea" parent="EnemySpawner/Spawners4" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -22)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea2" parent="EnemySpawner/Spawners4" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -22)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea3" parent="EnemySpawner/Spawners4" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -22)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea4" parent="EnemySpawner/Spawners4" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -18)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea5" parent="EnemySpawner/Spawners4" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -18)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea6" parent="EnemySpawner/Spawners4" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -18)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea7" parent="EnemySpawner/Spawners4" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -14)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea8" parent="EnemySpawner/Spawners4" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -14)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea9" parent="EnemySpawner/Spawners4" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -14)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea10" parent="EnemySpawner/Spawners4" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -14)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea11" parent="EnemySpawner/Spawners4" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -14)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea12" parent="EnemySpawner/Spawners4" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -18)
metadata/_edit_lock_ = true

[node name="EnemySpawnArea13" parent="EnemySpawner/Spawners4" instance=ExtResource("5_31qg7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -18)
metadata/_edit_lock_ = true

[node name="Enemies" type="Node3D" parent="."]

[node name="NavRegion" parent="." instance=ExtResource("6_x51mm")]
navigation_mesh = SubResource("NavigationMesh_wml4b")

[node name="BlockGridMap" parent="NavRegion" instance=ExtResource("7_m8bfi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
data = {
"cells": PackedInt32Array(-3, 65533, 1441792, -3, 65534, 1441792, -3, 65535, 1441792, -3, 0, 1441792, -3, 1, 1441792, -3, 2, 1441792, -2, 65533, 1441792, -2, 65534, 1441792, -2, 65535, 1441792, -2, 0, 1441792, -2, 1, 1441792, -2, 2, 1441792, -1, 65533, 1441792, -1, 65534, 1441792, -1, 65535, 1441792, -1, 0, 1441792, -1, 1, 1441792, -1, 2, 1441792, -65536, 65533, 1441792, -65536, 65534, 1441792, -65536, 65535, 1441792, -65536, 0, 1441792, -65536, 1, 1441792, -65536, 2, 1441792, -65535, 65533, 1441792, -65535, 65534, 1441792, -65535, 65535, 1441792, -65535, 0, 1441792, -65535, 1, 1441792, -65535, 2, 1441792, -65534, 65533, 1441792, -65534, 65534, 1441792, -65534, 65535, 1441792, -65534, 0, 1441792, -65534, 1, 1441792, -65534, 2, 1441792, -65535, 3, 1441792, -65536, 3, 1441792, -1, 3, 1441792, -2, 3, 1441792, -65533, 65534, 1441792, -65533, 65535, 1441792, -65533, 0, 1441792, -65533, 1, 1441792, -4, 65534, 1441792, -4, 65535, 1441792, -4, 0, 1441792, -4, 1, 1441792, -65535, 65532, 1441792, -65536, 65532, 1441792, -1, 65532, 1441792, -2, 65532, 1441792, -5, 65530, 1441792, -5, 65531, 1441792, -5, 65532, 1441792, -5, 65533, 1441792, -5, 65534, 1441792, -5, 65535, 1441792, -5, 0, 1441792, -5, 1, 1441792, -5, 2, 1441792, -5, 3, 1441792, -5, 4, 1441792, -4, 65530, 1441792, -4, 65531, 1441792, -4, 65532, 1441792, -4, 65533, 1441792, -4, 2, 1441792, -4, 3, 1441792, -4, 4, 1441792, -3, 65530, 1441792, -3, 65531, 1441792, -3, 65532, 1441792, -3, 3, 1441792, -3, 4, 1441792, -2, 65530, 1441792, -2, 65531, 1441792, -2, 4, 1441792, -1, 65530, 1441792, -1, 65531, 1441792, -1, 4, 1441792, -65536, 65530, 1441792, -65536, 65531, 1441792, -65536, 4, 1441792, -65535, 65530, 1441792, -65535, 65531, 1441792, -65535, 4, 1441792, -65534, 65530, 1441792, -65534, 65531, 1441792, -65534, 65532, 1441792, -65534, 3, 1441792, -65534, 4, 1441792, -65533, 65530, 1441792, -65533, 65531, 1441792, -65533, 65532, 1441792, -65533, 65533, 1441792, -65533, 2, 1441792, -65533, 3, 1441792, -65533, 4, 1441792, -65532, 65530, 1441792, -65532, 65531, 1441792, -65532, 65532, 1441792, -65532, 65533, 1441792, -65532, 65534, 1441792, -65532, 65535, 1441792, -65532, 0, 1441792, -65532, 1, 1441792, -65532, 2, 1441792, -65532, 3, 1441792, -65532, 4, 1441792, -65531, 65531, 1441792, -65531, 65532, 1441792, -65531, 65533, 1441792, -65531, 65534, 1441792, -65531, 65535, 1441792, -65531, 0, 1441792, -65531, 1, 1441792, -65531, 2, 1441792, -65531, 3, 1441792, -65531, 4, 1441792, -6, 65531, 1441792, -6, 65532, 1441792, -6, 65533, 1441792, -6, 65534, 1441792, -6, 65535, 1441792, -6, 0, 1441792, -6, 1, 1441792, -6, 2, 1441792, -6, 3, 1441792, -6, 4, 1441792, -65532, 5, 1441792, -65533, 5, 1441792, -65534, 5, 1441792, -65535, 5, 1441792, -65536, 5, 1441792, -1, 5, 1441792, -2, 5, 1441792, -3, 5, 1441792, -4, 5, 1441792, -5, 5, 1441792, -4, 6, 1441792, -3, 6, 1441792, -2, 6, 1441792, -1, 6, 1441792, -65536, 6, 1441792, -65535, 6, 1441792, -65534, 6, 1441792, -65533, 6, 1441792, -7, 65532, 1441792, -7, 65533, 1441792, -7, 65534, 1441792, -7, 65535, 1441792, -7, 0, 1441792, -7, 1, 1441792, -7, 2, 1441792, -7, 3, 1441792, -4, 65529, 1441792, -3, 65529, 1441792, -2, 65529, 1441792, -1, 65529, 1441792, -65536, 65529, 1441792, -65535, 65529, 1441792, -65534, 65529, 1441792, -65533, 65529, 1441792, -65530, 65532, 1441792, -65530, 65533, 1441792, -65530, 65534, 1441792, -65530, 65535, 1441792, -65530, 0, 1441792, -65530, 1, 1441792, -65530, 2, 1441792, -65530, 3, 1441792)
}
metadata/_edit_lock_ = true
metadata/_editor_floor_ = Vector3(0, -1, 0)

[node name="Floor" parent="NavRegion" instance=ExtResource("8_57bcx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -8)
cell_size = Vector3(16, 1, 16)
cell_center_x = true
cell_center_z = true
data = {
"cells": PackedInt32Array(0, 0, 0, 1, 0, 0, 65535, 0, 0, 0, 65535, 0, 0, 1, 0, 65535, 1, 1441793, 1, 1, 1, 1, 65535, 1048577, 65535, 65535, 655361)
}

[node name="GridMap" parent="NavRegion" instance=ExtResource("9_2liud")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -8)

[node name="BuildPhaseTimer" type="Timer" parent="."]
one_shot = true

[node name="Generator" parent="." instance=ExtResource("10_fogkv")]
durability = 250

[node name="Generator2" parent="." instance=ExtResource("10_fogkv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6.20666)
durability = 250
